[gd_scene load_steps=12 format=2]

[ext_resource path="res://graphics/door/doormove.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Door.gd" type="Script" id=2]
[ext_resource path="res://graphics/door/doorframe.png" type="Texture" id=3]
[ext_resource path="res://graphics/door/doorlight.png" type="Texture" id=4]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float percent : hint_float;

void fragment() {
	if (UV.x < percent) {
		COLOR = texture(TEXTURE, UV);
	} else {
		COLOR = vec4(0.0);
	}
}"
custom_defines = ""

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/percent = 0.0

[sub_resource type="CanvasItemMaterial" id=3]
blend_mode = 1

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 15, 48 )

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 64, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 64, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 10, 48 )

[node name="Door" type="Area2D"]
script = ExtResource( 2 )

[node name="frame" type="Sprite" parent="."]
position = Vector2( 0, -7.5 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 2 )
position = Vector2( 64, 0 )
z_index = 1
texture = ExtResource( 1 )

[node name="light" type="Sprite" parent="."]
material = SubResource( 3 )
position = Vector2( 0, -70 )
texture = ExtResource( 4 )
vframes = 3
frame = 1
region_enabled = true
region_rect = Rect2( 0, 0, 31, 33 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Close = SubResource( 5 )
anims/Open = SubResource( 6 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( -33, -49, 24, -48, 24, 48, 48, 48, 46, -59, -32, -59 )

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2( -40, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
shape = SubResource( 7 )
disabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
[connection signal="body_entered" from="." to="." method="_on_Door_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
